# communications-manager-api

./: .env  .flake8  .gitallowed  .gitignore  .locust.conf  .pre-commit-config.yaml  .tool-versions  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  base.js  damien.env  dorequest.sh  dummy.txt  example.env  git-secrets  locust.conf  manifest_template.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  redocly.yaml  request_body.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build.yml  continuous-integration.yml  pr-lint.yaml
azure/: azure-build-pipeline.yml  azure-pr-pipeline.yml  azure-pr-teardown-pipeline.yml  azure-release-candidate-pipeline.yaml  azure-release-pipeline.yml  nightly-end-to-end-pipeline.yml  nightly-int-dev-pipeline.yml  nightly-int-qa-pipeline.yml  nightly-int-sandbox-pipeline.yml  nightly-integration-pipeline.yml  nightly-internal-dev-end-to-end-pipeline.yml  nightly-prod-pipeline.yml  nightly-prod-sandbox-pipeline.yml  nightly-ref-pipeline.yml  nightly-uat-end-to-end-pipeline.yml  nightly-zap-scan-pipeline.yml  periodic-mtls-dev-pipeline.yml  periodic-mtls-pipeline.yml  periodic-mtls-prod-pipeline.yml  periodic-perf-test-pipeline.yml  project.yml
azure/templates/: checkout-latest-release.yml  run-tests.yml  teams-alert-setup.yml  teams-alert.yml
docs/: index.md  proxies.md
docs/tests/: index.md
nhsd-git-secrets/: .gitallowed-base  full-history-scan.sh  gitSecretsExample.Jenkinsfile  install-windows.ps1  nhsd-git-secrets.dockerfile  nhsd-rules-deny.txt  pre-commit-mac.sh  scan-repo-linux-mac.sh
postman/: CommunicationsManager.Integration.postman_collection.json  CommunicationsManager.Sandbox.postman_collection.json  CommunicationsManager.postman_collection.json  Development.postman_environment.json  Integration.postman_environment.json  NhsNotify.Integration.postman_collection.json  NhsNotify.Sandbox.postman_collection.json  Sandbox.postman_environment.json
proxies/: PROXIES.md
sandbox/: .c8rc.json  .mocharc.yml  .nycrc.json  Dockerfile  app.js  app.spec.js  handlers.js  index.js  package-lock.json  package.json  pnpm-lock.yaml  test-results.xml
sandbox/__test__/: backend_403.spec.js  backend_408.spec.js  backend_504.spec.js  batch_send.spec.js  data.js  get_message.spec.js  helpers.js  (+5 more)
scripts/: build_postman_environment.py  build_proxy.sh  calculate_version.py  check_licences.sh  check_python_licenses.sh  ensure_docs_validity.sh  gen-docs.sh  generate_bearer_token.py  lint_python.sh  perform-static-analysis.sh  pre-commit  process_imports.py  publish_zap_compatible.py  render_hbs.js  repoint_frontend.py  repoint_frontend.sh  run-postman.js  run_locust.sh  run_locust_capacity.sh  run_locust_load.sh  run_locust_soak.sh  run_locust_stress.sh  run_locust_surge.sh  run_zap.sh  selenium-setup.sh  sync_postman_collections.sh
specification/: comms.yaml  communications-manager.yaml  nhs-notify.yaml
tests/: conftest.py  test_400_errors.py  test_content_type_harmony.py  test_cors.py  test_endpoints.py  test_field_validation.py  test_forbidden.py  test_message_batch_create.py  test_no_such_routing_plan.py  test_not_acceptable.py  test_not_found.py  test_response_headers.py  test_service_unavailable.py  test_timeouts.py  test_too_many_requests.py  test_unauthorized.py  test_unsupported_media.py  test_x_correlation_id.py  tests_forbidden.py
zap/: Dockerfile  nunit-template.hbs  zap.yaml
(+1221 files in other folders)
