[project]
python = "^3.13"
name = "communications-manager"
version = "0.0.1-alpha"
description = "Public facing API for the Communications Manager service"
authors = [
    { name = "NHS Digital" }
]

[tool.poetry]
package-mode = false
readme = "README.md"
license = "MIT"
repository = "https://github.com/NHSDigital/communications-manager-api"
homepage = "https://digital.nhs.uk/developer/api-catalogue/nhs-notify"
keywords = ["healthcare", "uk", "nhs", "communications", "email", "sms", "letter"]


[tool.poetry.dependencies]
python = "^3.13"
pytest-nhsd-apim = "^5.0.0"
pytest-xdist = "^3.6.1"
pre-commit = "^4.2.0"
pytest-rerunfailures = "^15.1"
sphinx = "^8.2.3"
sphinx-markdown-builder = "^0.6.8"
notifications-python-client = "^10.0.1"
polling = "^0.3.2"
playwright = "^1.52.0"
install_playwright = "^0.1.0"

[poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^24.4"
pip-licenses = "^4.3.4"
jinja2 = "^3.1.5"
pyyaml = "^6.0"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^3.0.2"
gitpython = "^3.1.43"
pytest = "^8.3.4"
coverage = "^7.4.4"
pytest-asyncio = "^0.20.3"

[poetry.scripts]
